pipeline/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modresorts
  name: modresorts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modresorts
  template:
    metadata:
      labels:
        app: modresorts
    spec:
      containers:
        - image: docker.io/application
          imagePullPolicy: Always
          name: modresorts
          ports:
            - containerPort: 9080
