pipeline/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modresorts
  name: modresorts
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
    - name: https
      port: 9443
      targetPort: 9443   
    - name: admin
      port: 9043
      targetPort: 9043   
      nodePort: 31939
  selector:
    app: modresorts
