pipeline/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: modresorts
  name: modresorts
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: modresorts
    weight: 100
